fix sticking breadcrumds on Safari

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -20,6 +20,7 @@
         display: inline-block;
         a {
           @include sansSerifLight;
+          @include hwa;
           @include transition(padding 0.4s, font-size 0.4s, opacity 0.4s);
           color: $grey-light;
           display: inline-block;
@@ -37,6 +38,7 @@
     }
     &__home-icon {
       @include transition(height 0.4s, width 0.4s);
+      @include hwa;
       border: solid 1px;
       border-radius: 50%;
       width: 64px;
